# PyChebyshev

./: .gitignore  404.html  BLACKSCHOLES_LIBRARY_ANALYSIS.md  CHANGELOG.md  CHEBYSHEV_ACCELERATION.md  CHEBYSHEV_CONVERGENCE_RATES.md  CLAUDE.md  FDM_COMPARISON_RESULTS.md  LICENSE  MOCAX_5D_BLACKSCHOLES.md  MOCAX_5D_RESULTS.md  MOCAX_ALGORITHM_ANALYSIS.md  MOCAX_README.md  MOCAX_SETUP_GUIDE.md  PLAN-serialization-printing.md  README.md  ROADMAP.md  TENSOR_COMPARISON_SUMMARY.md  chebyshev_barycentric.py  chebyshev_baseline.py  chebyshev_tensor_demo.py  compare_2d_error_surface.py  compare_2d_error_surface_barycentric.py  compare_algebra.py  compare_calculus_completion.py  compare_ergonomics.py  compare_error_estimation.py  compare_error_threshold.py  compare_extrude_slice.py  compare_from_values.py  compare_methods_time_accuracy.py  compare_sliding.py  compare_special_points.py  compare_spline.py  compare_tensor_train.py  compare_tensor_train_als.py  compare_v016_polish.py  compare_v018_tt_parity.py  compare_v019_build_diagnostics.py  compare_v0201_dim_threading.py  (+23 more)
.github/workflows/: dependabot-automerge.yml  publish.yml  test.yml
api/reference/: index.html
benchmarks/: index.html
docs/: benchmarks.md  getting-started.md  index.md  roadmap.md
docs/api/: reference.md
docs/user-guide/: adaptive-refinement.md  algebra.md  binary-format.md  build-diagnostics.md  calculus.md  concepts.md  cross-language-readers.md  ergonomics.md  error-driven-construction.md  error-estimation.md  extrude-slice.md  from-values.md  greeks.md  serialization.md  sliding.md  special-points.md  spline.md  tensor-train-als.md  tensor-train.md  usage.md
examples/: black_scholes_greeks.py  quick_start.py
examples/binary_reader/: .gitignore  Makefile  README.md  reader.c
getting-started/: index.html
readers/: README.md
readers/julia/: Manifest.toml  Project.toml  README.md
readers/rust/: Cargo.toml  README.md
readers/rust/src/: lib.rs
readers/rust/tests/: round_trip.rs
roadmap/: index.html
scripts/: generate_test_fixtures.py
search/: search_index.json
src/pychebyshev/: __init__.py  _algebra.py  _binary.py  _calculus.py  _extrude_slice.py  _jit.py  _parallel.py  _progress.py  _sensitivity.py  _viz.py  barycentric.py  slider.py  (+2 more)
tests/: conftest.py  test_algebra.py  test_barycentric.py  test_binary_format.py  test_calculus.py  test_calculus_completion.py  test_ergonomics.py  test_error_threshold.py  test_extrude_slice.py  test_from_values.py  test_slider.py  test_special_points.py  test_spline.py  test_tensor_train.py  test_v016_polish.py  test_v018_tt_parity.py  test_v019_build_diagnostics.py  test_v0201_dim_threading.py  test_v020_adaptive_refinement.py
(+27 files in other folders)
