[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pychebyshev"
version = "0.9.5"
description = "Fast multi-dimensional Chebyshev tensor interpolation with analytical derivatives"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Max Zhang"}]
keywords = [
    "chebyshev",
    "interpolation",
    "numerical-methods",
    "option-pricing",
    "spectral-methods",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.12",
]

[project.optional-dependencies]
jit = ["numba>=0.60"]  # Deprecated: vectorized_eval() via BLAS is ~150x faster than JIT fast_eval()
dev = [
    "blackscholes>=0.2.0",
    "matplotlib>=3.10",
    "pytest>=8.0",
    "ruff>=0.4",
    "tqdm>=4.60",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/0xC000005/PyChebyshev"
Documentation = "https://0xC000005.github.io/PyChebyshev"
Repository = "https://github.com/0xC000005/PyChebyshev"

[tool.hatch.build.targets.wheel]
packages = ["src/pychebyshev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[dependency-groups]
dev = [
    "blackscholes>=0.2.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
